# JV-Link-Raw-Data-Fetcher

./: README.md  main.py  pyproject.toml
docs/: current-architecture.md
jv_link_raw_data_fetcher/: __init__.py  app_config.py  cli.py
tests/: test_platform_doctor.py
