[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "jv-link-raw-data-fetcher"
version = "0.1.0"
description = "JV-Link Raw Data Fetcher"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Open source contributors" }
]
dependencies = [
  "pywin32>=306; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.12.0",
]

[project.scripts]
jv-link-raw-data-fetcher = "jv_link_raw_data_fetcher.cli:main"

[tool.setuptools]
packages = ["jv_link_raw_data_fetcher"]
py-modules = [
  "archive_store",
  "config",
  "job_runner",
  "job_state",
  "jvlink_session",
  "raw_writer",
  "main",
]

[tool.ruff]
line-length = 100
